# notes

./: .clangd  .gitignore  .markdownlint.json  CODEOWNERS  README.md  bun.lockb  eslint.config.js  package.json
.github/: copilot-instructions.md
1 Func Prog/: haskell.hs
1 Func Prog/1/: gyak.hs
1 Func Prog/1- 2023-09-14/: 1.hs  1.md
1 Func Prog/10/: gyak.hs
1 Func Prog/11/: gyak.hs
1 Func Prog/12/: gyak.hs
1 Func Prog/2 - 2023-09-19/: 2.hs  haskell.hs
1 Func Prog/2 - 2023-09-21/: 2.hs
1 Func Prog/3/: ea.hs  gyak.hs
1 Func Prog/4/: ea.hs
1 Func Prog/5/: ea.hs  gyak.hs
1 Func Prog/6/: gyak.hs
1 Func Prog/7/: ea.hs  gyak.hs
1 Func Prog/8/: ea.hs
1 Func Prog/9/: gyak.hs
1 Imp Prog/: README.md
1 Imp Prog/10/: main.c  szoveg.txt  tasks.c  tasks.h  upper.txt
1 Imp Prog/11/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  functions.c  functions.h
1 Imp Prog/12/: 1.c  func.c  func.h  main.c
1 Imp Prog/13/: func.c  func.h  main.c
1 Imp Prog/2 - 2023-09-18/: 1. feladat függvény.c  1. feladat.c
1 Imp Prog/2 - 2023-09-20/: 1.c  6.c
1 Imp Prog/2 2023-09-18/: 1. feladat függvény.c  1. feladat.c  2.md
1 Imp Prog/3/: ea.md
1 Imp Prog/4/: ea.md
1 Imp Prog/5/: ea.md
1 Imp Prog/6/: ea.md
1 Imp Prog/8/: ea.md  gyak.c
1 Imp Prog/9/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  (+1 more)
1 Programozás/: .editorconfig  README.md
3/3 Cpp/ati_1/: CMakeLists.txt  README.md  hello.cpp  main.cc  math.cppm  tracer.cc
3/3 Cpp/ati_1/src/: main.cpp
Home/: 1.md  2.md
Jog/: 1.md
Tutorials/: Obsidian.md  assembly arm.s  assembly x86.asm  cap n proto.capnp  haskell.hs
(+624 files in other folders)
